[package]
name = "rusty-path-of-building"
authors = ["meehl"]
description = "Cross-platform runtime for Path of Building"
repository = "https://github.com/meehl/rusty-path-of-building"
license = "MIT"
version = "0.2.18"
edition = "2024"
publish = false

[dependencies]
ahash = "0.8.12"
anyhow = "1.0"
arboard = { version = "3.6.1", default-features = false }
bytemuck = "1.23.2"
clap = { version = "4.5.46", features = ["derive"] }
dds = "0.1.0"
directories = "6.0.0"
env_logger = "0.10"
euclid = { version = "0.22.11", features = ["bytemuck"] }
fast_image_resize = { version = "6.0.0", features = ["image"] }
flate2 = "1.1.2"
glob = "0.3.3"
image = { version = "0.25.8", default-features = false, features = ["rayon", "jpeg", "png", "webp"] }
log = "0.4"
mlua = { version = "0.11.2", features = ["luajit", "anyhow"] }
nohash-hasher = "0.2.0"
num-traits = "0.2.19"
open = "5.3.2"
ordered-float = "5.0.0"
parley = "0.6.0"
pollster = "0.3"
profiling = "1.0"
puffin_http = { version = "0.16", optional = true }
raw-window-handle = "0.6.2"
regex = "1.11.2"
reqwest = { version = "0.13.2", features = ["blocking"] }
swash = "0.2.5"
tar = "0.4.44"
wgpu = { version = "27.0.1", default-features = false, features = ["std", "parking_lot", "vulkan", "metal", "wgsl"] }
winit = "0.30"
zstd = "0.13.3"

[target.'cfg(target_os = "linux")'.dependencies]
smithay-clipboard = "0.7.3"

[features]
profile-with-puffin = ["profiling/profile-with-puffin", "dep:puffin_http"]
